JBRULES-527: adding primitive handling support to the core engine.
git-svn-id: https://svn.jboss.org/repos/labs/labs/jbossrules/trunk@6903 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70